# phishnet-ai

./: .dockerignore  .gitignore  Dockerfile  LICENSE  MODEL_CARD.md  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
assets/: metrics.json  metrics_real.json
data/: README.md
data/sample/: phiusiil_sample.csv
docs/: threat_model.md
models/: phishnet-0.3.0.joblib
scripts/: benchmark_latency.py  download_data.py
src/: phishnet.py
src/phishnet/: __init__.py  __main__.py  api.py  artifact.py  baseline.py  cli.py  data.py  data_real.py  evaluate.py  leakage.py  model.py  real_pipeline.py
tests/: test_api.py  test_artifact.py  test_baseline.py  test_cli.py  test_data.py  test_data_real.py  test_evaluate.py  test_leakage.py  test_model.py  test_real_pipeline.py
