[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "phishnet"
version = "0.2.0"
description = "Phishing email classification with a small attention-based neural network"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "torch",
    "numpy",
    "matplotlib",
    "scikit-learn",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
phishnet = "phishnet.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
