[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "phishnet"
version = "0.2.0"
description = "Phishing email classification with a small attention-based neural network"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "torch==2.13.0",
    "numpy==2.4.6",
    "matplotlib==3.11.1",
    "scikit-learn==1.9.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "pip-audit", "bandit"]

[project.scripts]
phishnet = "phishnet.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
