[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "phishnet"
version = "0.3.0"
description = "Phishing URL detection: char-level attention NN, TF-IDF, and gradient boosting baselines, benchmarked on real PhiUSIIL data with a FastAPI deployment"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "torch==2.13.0",
    "numpy==2.4.6",
    "matplotlib==3.11.1",
    "scikit-learn==1.9.0",
    "pandas==3.0.5",
    "tldextract==5.3.1",
    "fastapi==0.139.2",
    "uvicorn==0.51.0",
    "pydantic==2.13.4",
    "slowapi==0.1.10",
    "prometheus-client==0.25.0",
    "joblib==1.5.3",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "httpx", "pip-audit", "bandit"]

[project.scripts]
phishnet = "phishnet.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
